--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,54 +4,54 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="HackWITus Official Website"
-    />
+    <meta name="description" content="HackWITus Official Website" />
     <!-- iOS Web Clip -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="mask-icon"
-      href="/assets/images/favicon/safari-pinned-tab.svg"
+      href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta
       name="msapplication-config"
-      content="/assets/images/favicon/browserconfig.xml"
+      content="%PUBLIC_URL%/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     <script src="https://kit.fontawesome.com/84bdd82b1d.js"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/wea5lpb.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wea5lpb.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
